# docker-workshop

./: Dockerfile  README.md  file1.txt  ingest_data.py  notebook.ipynb  pyproject.toml  script.py.bak
pipeline/: pipeline.py
test/: script.py
