[project]
name = "docker-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jupyter>=1.1.1",
    "pandas>=3.0.3",
    "psycopg2>=2.9.12",
    "psycopg2-binary>=2.9.12",
    "pyarrow>=24.0.0",
    "sqlalchemy>=2.0.50",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "pgcli>=4.4.0",
]
